--- a/RN.Lux.MvcWebUI/wwwroot/Content/pages/tables.html
+++ b/RN.Lux.MvcWebUI/wwwroot/Content/pages/tables.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1053,7 +1053,7 @@
                     <!-- /.panel -->
                 </div>
                 <!-- /.col-lg-6 -->
-                <div class="col-lg-6">
+                <div class="col-md-2">
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             Context Classes
